[package]
name = "kaggle_c_titanic"
version = "0.6.2"
authors = ["Perfspec <lewisrwebb@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Perfspec/kaggle_c_titanic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
approx = "0.4.0"
